syntax = "proto3";
package airbloc.collections;

service TypeService {
    rpc Create(CreateTypeRequest) returns (CreateTypeResult);
}

message CreateTypeRequest {
    string name = 1;
    string schema = 2;
}

message CreateTypeResult {
    bool exists = 1;
    string id = 2;
    uint64 gasUsed = 3;
}

service CollectionService {
    rpc Create(CreateCollectionRequest) returns (CreateCollectionResponse);
    rpc List(ListCollectionRequest) returns (ListCollectionResponse);
}

message Collection {
    string id = 1;
    string name = 2;
    string type = 3;
    reserved 4 to 10;
    string incentivePolicy = 11;
}

message CreateCollectionRequest {
    string name = 1;
    string type = 2;
    reserved 3 to 10;
    string incentivePolicy = 11;
}

message CreateCollectionResponse {
    string collectionId = 1;
}

message ListCollectionRequest {
    int32 pageIndex = 1;
    int32 itemsPerPage = 2;
}

message ListCollectionResponse {
    int32 total = 1;
    repeated Collection collections = 2;
}
